--- a/src/main/resources/templates/administration/admin.html
+++ b/src/main/resources/templates/administration/admin.html
@@ -5,15 +5,17 @@
 
 <meta charset="UTF-8">
 
-<title>One Page</title>
+<title>Admin</title>
 
 
 </head>
 
 <body>
-<h1>One Page</h1>
-<br>
-<a href="/login">Login</a>
+
+<h1>Administration</h1>
+
+{{> /home/_logout }}
+
 </body>
 
 </html>
