--- a/src/main/resources/templates/home/default.html
+++ b/src/main/resources/templates/home/default.html
@@ -15,8 +15,10 @@
 <br>
 <a href="/invoices">Go to the list of Invoices</a>
 <br>
-<br>
 <a href="/billing-records">Go to the list of Billings</a>
+<br>
+<br>
+<a href="/administration">Administration</a>
 </body>
 
 </html>
