--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -10,13 +10,13 @@
 
 <form method="post" action="/trylogin">
 
-	<h1> user_name</h1>
+	<h1>user name</h1>
 	<input type="text" name="username">
 
-	<h1>password</h1>
+	<h1>password:</h1>
 	<input type="password" name="password">
 	
-	<button>Try to Get Past Me</button>
+	<button>Login</button>
 	<input type="hidden" name="{{ _csrf.parameterName }}" value="{{ _csrf.token }}">
 
 </form>
