End of Security

--- a/src/main/resources/templates/home/default.html
+++ b/src/main/resources/templates/home/default.html
@@ -20,5 +20,9 @@
 <br>
 <a href="/administration">Administration</a>
 </body>
-
+<br>
+<br>
+<a href="/login">Login</a>
+<br>
+<a href="/signup">Signup</a>
 </html>
